# follow_waypoints

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
cfg/: FollowWaypoints.cfg
launch/: follow_waypoints.launch
nodes/: follow_waypoints  follow_waypoints_node.py
saved_path/: pose.csv
src/: save_waypoints.py
src/follow_waypoints/: __init__.py  follow_waypoints.py
srv/: save_point.srv
test/: integration_test.py  run_tests.py
